--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "node-red-contrib-countdown-2": "~1.4.0",
     "node-red-contrib-play-audio": "^2.5.0",
+    "node-red-contrib-ui-led": "~0.3.3",
     "node-red-dashboard": "~2.26.1",
     "node-red-node-pi-gpio": "^1.2.3",
     "node-red-node-ping": "^0.2.2",
